# Automotive-HMI-Dashboard

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  build.sh  qml.qrc
docs/: ARCHITECTURE.md  AUTOMATED_BUILD_GUIDE.md  RUNNING_GUIDE.md
qml/HmiDashboard/: CMakeLists.txt  Main.qml  Theme.qml
qml/HmiDashboard/Cluster/: AdasOverlay.qml  CMakeLists.txt  InstrumentCluster.qml  Speedometer.qml  Tachometer.qml  TellTaleIndicator.qml  TellTales.qml
qml/HmiDashboard/Components/: CMakeLists.txt  CircularGauge.qml  GlowButton.qml  GradientBar.qml
qml/HmiDashboard/Infotainment/: CMakeLists.txt  HvacPanel.qml  InfotainmentPanel.qml  MediaPlayer.qml  VehicleSettings.qml
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: AdasData.h  DataIntegrity.h  HvacData.h  IAdasProcessingStrategy.h  IAdasSensor.h  IHvacController.h  IMediaProvider.h  ITellTaleObserver.h  IVehicleBus.h  IVehicleRpmObserver.h  IVehicleSpeedObserver.h  MediaData.h  VehicleData.h  WatchdogTimer.h
src/core/src/: DataIntegrity.cpp  WatchdogTimer.cpp
src/services/: BasicProcessingStrategy.cpp  BasicProcessingStrategy.h  CMakeLists.txt  LocalFileMediaProvider.cpp  LocalFileMediaProvider.h  SimulatedAdasPipeline.cpp  SimulatedAdasPipeline.h  SimulatedCanBus.cpp  SimulatedCanBus.h  SimulatedHvacHardware.cpp  SimulatedHvacHardware.h  YoloProcessingStrategy.cpp  YoloProcessingStrategy.h
src/viewmodels/: AdasViewModel.cpp  AdasViewModel.h  CMakeLists.txt  DashboardStateManager.cpp  DashboardStateManager.h  HvacViewModel.cpp  HvacViewModel.h  MediaPlayerViewModel.cpp  MediaPlayerViewModel.h  RpmViewModel.cpp  RpmViewModel.h  SpeedViewModel.cpp  SpeedViewModel.h  TellTaleViewModel.cpp  TellTaleViewModel.h  VehicleSettingsViewModel.cpp  VehicleSettingsViewModel.h  WatchdogManager.cpp  WatchdogManager.h
